[project]
name = "stpsherbot"
version = "0.1.0"
description = "Бот-помощник СТП"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "stp-database @ git+https://git@github.com/ERTG-BOTS/stp-database.git",
    "aiogram>=3.23.0",
    "aiogram-dialog>=2.4.0",
    "aiomysql>=0.3.2",
    "apscheduler>=3.11.0",
    "betterlogging>=1.0.0",
    "cachetools>=5.5.2",
    "databases>=0.9.0",
    "environs>=14.5.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pandas-stubs==3.0.0.260204",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "sqlalchemy==2.0.46",
    "pytest>=9.0.2",
    "httpx>=0.28.1",
    "ics>=0.7.2",
]

[tool.ruff]
preview = true

[tool.ruff.lint]
select = ["E", "F", "I", "ARG001"]
ignore = ["D417", "E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"
